tests/snapshots/render_snapshots__footer_shows_success_message.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | default | - | - | no dsn                                         
┌ [1] Explorer ┐[Cols] [Idx] [FK] [RLS] [DDL]                                   
│Connections   │┌ [2] Inspector ───────────────────────────────────────────────┐
│ Current: loca││(select a table)                                              │
│              ││                                                              │
│Tables        ││                                                              │
│ Press 'r' to ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │└──────────────────────────────────────────────────────────────┘
│              │┌ [3] Result ──────────────────────────────────────────────────┐
│              ││(select a table to preview)                                   │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
Reconnected!
